Внесены исправления согласно эталонному решению